# binaryninja-dump

./: Cargo.toml  README.md
src/: lib.rs
